# ESP32-S3-Touch-AMOLED-1.8-SALMON_RUN

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults
components/esp_lcd_sh8601/test_apps/: sdkconfig
main/: CMakeLists.txt  idf_component.yml  lv_font_pingfang_16_cjk.c  lv_font_pingfang_18_cjk.c  lv_font_pingfang_22_cjk.c  lv_font_pingfang_24_cjk.c  salmon_run.c
